adds two endpoints for home feed and changes api contract for endpoints requiring mediaID
